--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "check-style": "standard \"src/**/*.js\"",
-    "fix-style": "standard \"src/**/*.js\" --fix",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "fix-style": "standard \"src/**/*.js\" --fix"
   },
   "repository": {
     "type": "git",
@@ -16,11 +14,9 @@
   "author": "Owen Voke <owzie123@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18"
+    "axios": "^0.18.1"
   },
   "devDependencies": {
-    "snyk": "^1.161",
     "standard": "^12.0"
-  },
-  "snyk": true
+  }
 }
